fixed layout issues

--- a/style.css
+++ b/style.css
@@ -22,23 +22,28 @@ li{list-style:none}
    My CSS
    ========================================================================== */
 
+html,body{ 
+	width:100%;
+	height:100%;
+}
+
 body {
-	font-size: 16px;
-	font-family: 'Lora', sans-serif;
+	font:normal 16px 'Lora', serif;
 }
 
 #particles-js {
     width: 100%;
     height: 100%;
-    background-color: #b61924;
-    background-image: url('');
-    background-size: cover;
-    background-position: 50% 50%;
-    background-repeat: no-repeat;
+}
+
+canvas{
+  display:block;
+  vertical-align:bottom;
 }
 
 main {
 	max-width: 500px;
+	width: 90%;
 	position: absolute;
 	top: 50%;
 	left: 50%;
@@ -60,6 +65,9 @@ p {
 }
 
 ul {
+	margin-left: 1.2rem;
+}
+
+li {
 	list-style: circle;
-	margin: 1rem;
 }
